--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,289 @@
-/* You can add global styles to this file, and also import other style files */
+/*--
+Author: W3layouts
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+--*/
+/* start editing from here */
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
+	margin:0;
+	padding:0;
+	border:0;
+	font-size:100%;
+	font:inherit;
+	vertical-align:baseline;
+}
+article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+ol,ul {
+	list-style:none;
+	margin:0;
+	padding:0;
+}
+blockquote,q {
+	quotes:none;
+}
+blockquote:before,blockquote:after,q:before,q:after {
+	content:'';content:none;}
+table {
+	border-collapse:collapse;
+	border-spacing:0;
+}
+
+/* start editing from here */
+a {
+	text-decoration:none;
+}
+.txt-rt {
+	text-align:right;
+}/* text align right */
+.txt-lt {
+	text-align:left;
+}/* text align left */
+.txt-center {
+	text-align:center;
+}/* text align center */
+.float-rt {
+	float:right;
+}/* float right */
+.float-lt {
+	float:left;
+}/* float left */
+.clear {
+	clear:both;
+}/* clear float */
+.pos-relative {
+	position:relative;
+}/* Position Relative */
+.pos-absolute {
+	position:absolute;
+}/* Position Absolute */
+.vertical-base {
+	vertical-align:baseline;
+}/* vertical align baseline */
+.vertical-top {
+	vertical-align:top;
+}/* vertical align top */
+.underline {
+	padding-bottom:5px;
+	border-bottom: 1px solid #eee;
+	margin:0 0 20px 0;
+}/* Add 5px bottom padding and a underline */
+nav.vertical ul li {
+	display:block;
+}/* vertical menu */
+nav.horizontal ul li {
+	display: inline-block;
+}/* horizontal menu */
+img {
+	max-width:100%;
+}
+/*end reset*/
+
+/*--login start here--*/
+body{
+	font-family: 'Roboto', sans-serif;
+	font-size: 100%;
+	background:#313144;
+}
+a {
+	text-decoration: none;
+}
+a:hover {
+	transition: 0.5s all;
+	-webkit-transition: 0.5s all;
+	-moz-transition: 0.5s all;
+	-o-transition: 0.5s all;
+}
+/*--header start here--*/
+h1 {
+	text-align: center;
+	font-size: 2em;
+	font-weight: bold;
+	color: #fff;
+	margin: 3em 0em 2em 0em;
+	font-family: 'Quicksand', sans-serif;
+}
+.element {
+	display: block;
+	width: 40%;
+	margin: 0 auto 7em;
+}
+.copy-right {
+	text-align: center;
+	padding:0em 0em 2em 0em;
+}
+.copy-right p {
+	font-size: 1em;
+	color: #fff;
+	line-height: 1.6em;
+}
+.copy-right p a{
+	color: #fd7b87;
+}
+.copy-right p a:hover{
+	color: #fff;
+	text-decoration:none;
+}
+
+/*--meadia quries start here--*/
+@media(max-width:1600px){
+	.temperatur {
+		margin-bottom:1.95em;
+	}
+}
+@media(max-width:1440px){
+	.jspVerticalBar {
+		width: 15px!important;
+	}
+	.ele-strip ul li {
+		padding: 0em 0.8em;
+	}
+	.element-right {
+		width: 40%;
+	}
+	.element {
+		width: 43%;
+	}
+	.ele-strip ul li {
+		padding: 0em 0.4em;
+	}
+	.teddy-text {
+		padding: 1.2em 1em;
+	}
+	.temperatur {
+		margin-bottom: 1.5em;
+	}
+}
+@media(max-width:1366px){
+	.element-left {
+		width: 55%;
+	}
+	.element {
+		width: 44%;
+	}
+	.temperatur {
+		margin-bottom: 2.5em;
+	}
+}
+@media(max-width:1280px){
+	.teddy-text h4 {
+		font-size: 0.95em;
+	}
+	.element {
+		width: 47.5%;
+	}
+}
+@media(max-width:1024px){
+	.element {
+		idth: 58.5%;
+	}
+	.temperatur {
+		margin-bottom: 2.3em;
+	}
+}
+@media(max-width:768px){
+	.element {
+		width: 76.5%;
+	}
+	.temperatur {
+		margin-bottom: 2.1em;
+	}
+}
+@media(max-width:736px){
+	.temperatur {
+		margin-bottom: 2em;
+	}
+}
+@media(max-width:667px){
+	.element {
+		width: 85.5%;
+	}
+	.temperatur {
+		margin-bottom: 2em;
+	}
+}
+@media(max-width:640px){
+	.element {
+		width: 90.5%;
+	}
+	.temperatur {
+		margin-bottom:2.3em;
+	}
+	.teddy-text {
+		padding: 1em 1em;
+	}
+}
+@media(max-width:600px){
+	.element {
+		width: 94.5%;
+	}
+}
+@media(max-width:568px){
+	.element {
+		width: 98%;
+	}
+}
+@media(max-width:480px){
+	.element-left {
+		width: 100%;
+		float: none;
+	}
+	.element-right {
+		width: 100%;
+		float: none;
+		margin: 1.5em 0em 0em 0em;
+	}
+	.element {
+		width: 80%;
+	}
+	h1 {
+		font-size: 1.8em;
+		margin: 1.5em 0em 1em 0em;
+	}
+	.jspContainer {
+		width: 335px !important;
+	}
+	.temperatur {
+		margin-bottom: 1.5em;
+	}
+}
+@media(max-width:320px){
+	h1 {
+		font-size: 1.5em;
+		margin: 1em 0em 1em 0em;
+	}
+	.element {
+		width: 95%;
+		margin: 0 auto 2em;
+	}
+	.jspContainer {
+		width: 259px !important;
+	}
+	.row.row1.scroll-pane.jspScrollable {
+		width: 260px!important;
+	}
+	.ele-strip ul li a {
+		font-size: 0.9em;
+	}
+	.top-on1 h4 {
+		font-size: 0.84em;
+	}
+	.top-on1 h5 {
+		font-size: 0.75em;
+	}
+	.copy-right p {
+		font-size: 0.85em;
+	}
+	.activity-desc h5 {
+		color: #000;
+		font-size: 0.95em;
+	}
+	.activity-desc p {
+		font-size: 0.8em;
+	}
+	.activity-desc h6 {
+		font-size: 12px;
+	}
+}
