gh pages deployment

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="element-bg-img">
-	<img src="../../assets/images/1.jpg" alt="" class="img-responsive">
+	<img src="assets/images/1.jpg" alt="" class="img-responsive">
 </div>
 <div class="element-left-bottom">
 	<div class="ele-strip">
@@ -24,8 +24,8 @@
 					</div>
 					<div class="activity-img">
 						<ul>
-							<li><img src='../../assets/images/res.jpg'  alt=""/></li>
-							<li><img src='../../assets/images/r1.jpg'  alt=""/></li>
+							<li><img src='assets/images/res.jpg'  alt=""/></li>
+							<li><img src='assets/images/r1.jpg'  alt=""/></li>
 						</ul>
 					</div>
 					<div class="clear"> </div>
@@ -39,8 +39,8 @@
 					</div>
 					<div class="activity-img">
 						<ul>
-							<li><img src='../../assets/images/res.jpg'  alt=""/></li>
-							<li><img src='../../assets/images/r1.jpg'  alt=""/></li>
+							<li><img src='assets/images/res.jpg'  alt=""/></li>
+							<li><img src='assets/images/r1.jpg'  alt=""/></li>
 						</ul>
 					</div>
 					<div class="clear"> </div>
@@ -54,8 +54,8 @@
 					</div>
 					<div class="activity-img">
 						<ul>
-							<li><img src='../../assets/images/res.jpg'  alt=""/></li>
-							<li><img src='../../assets/images/r1.jpg'  alt=""/></li>
+							<li><img src='assets/images/res.jpg'  alt=""/></li>
+							<li><img src='assets/images/r1.jpg'  alt=""/></li>
 						</ul>
 					</div>
 					<div class="clear"> </div>
