--- a/src/app/followers/followers.component.html
+++ b/src/app/followers/followers.component.html
@@ -6,11 +6,11 @@
 <div class="teddy-follow">
 	<ul>
 		<li class="folw-h">
-			<h3>2850</h3>
+			<h3>{{followers}}</h3>
 			<p>Followers</p>
 		</li>
 		<li>
-			<h3>675</h3>
+			<h3>{{following}}</h3>
 			<p>Following</p>
 		</li>
 	</ul>
