Hotels list binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-search class="element-left" [filter]="countries" (onSelected)="onCountrySelected($event)"></app-search>
+<app-search class="element-left" [places]="places" [filter]="countries" (onSelected)="onCountrySelected($event)"></app-search>
 <div class="element-right">
 	<app-weather class="temperatur"></app-weather>
 	<app-followers class="teddy-bear"></app-followers>
