--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -12,22 +12,20 @@
 		<span class="line"> </span>
 		<div class="activity_box">
 			<div class="scrollbar" id="style-2">
-				<div class="activity-row">
+				<div *ngFor="let place of places" class="activity-row">
 					<div class="activity-desc">
-					<h5>Resort Address</h5>
-						<p>Sed perspiciatis</p>
-						<p>Et harum quidem</p>
-						<h6>Tel:+1285 968 685</h6>
+					<h5>{{place.Name}}</h5>
+						<p>{{place.Description}}</p>
 					</div>
 					<div class="activity-img">
 						<ul>
-							<li><img src='assets/images/res.jpg'  alt=""/></li>
-							<li><img src='assets/images/r1.jpg'  alt=""/></li>
+							<li><img [src]="place.LandscapePhoto"  alt=""/></li>
+							<li><img [src]='place.PromoPhoto'  alt=""/></li>
 						</ul>
 					</div>
 					<div class="clear"> </div>
 				</div>
-				<div class="activity-row">
+				<!--<div class="activity-row">
 					<div class="activity-desc">
 						<h5>Resort Address</h5>
 						<p>Sed ut perspiciatis</p>
@@ -56,7 +54,7 @@
 						</ul>
 					</div>
 					<div class="clear"> </div>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</div>
