--- a/src/styles.css
+++ b/src/styles.css
@@ -276,10 +276,12 @@ i.text-info{
 }
 .activity-img img{
 	display:inline-block;
+	width: 3em;
+	height: 3em;
 }
 .activity-desc h5{
 	color:#000;
-	font-size:1em;
+	font-size:0.9em;
 	font-weight:500;
 	margin-bottom: 5px;
 }
@@ -288,7 +290,7 @@ i.text-info{
 }
 .activity-desc p{
 	color:#999;
-	font-size:0.94em;
+	font-size:0.8em;
 	line-height:1.7em;
 }
 .activity-desc h6 {
