--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,5 +1,5 @@
-<h5>Et harum quidem</h5>
+<h5>{{hotel.Country}}</h5>
 <span class="w-line"> </span>
 <span class="cloud"> </span>
-<h2>14<sup class="degree">°</sup></h2>
-<h6>Water 20<sup class="degree">°</sup></h6>
+<h2>{{hotel.Temperature}}<sup class="degree">°</sup></h2>
+<h6>The water is cool!<sup class="degree">°</sup></h6>
