--- a/src/app/followers/followers.component.html
+++ b/src/app/followers/followers.component.html
@@ -1,16 +1,16 @@
 <div class="teddy-text">
-	<h4>Nam libero voluptatem</h4>
+	<h4>{{hotel.Name}}</h4>
 	<span class="w-line"> </span>
-	<img src="assets/images/b1.jpg" alt=""  class="img-responsive">
+	<img [src]="hotel.PromoPhoto" alt="" class="img-responsive">
 </div>
 <div class="teddy-follow">
 	<ul>
 		<li class="folw-h">
-			<h3>{{followers}}</h3>
+			<h3>{{hotel.Followers}}</h3>
 			<p>Followers</p>
 		</li>
 		<li>
-			<h3>{{following}}</h3>
+			<h3>{{hotel.Following}}</h3>
 			<p>Following</p>
 		</li>
 	</ul>
