--- a/src/styles.css
+++ b/src/styles.css
@@ -302,11 +302,23 @@ i.text-info{
 .activity-row{
 	margin-bottom:1em;
 }
+a.activity-row{
+	display: block;
+	cursor: pointer;
+	padding: 5px;
+	padding-left: 1em;
+}
+a.activity-row:hover{
+	background-color: gainsboro;
+}
+a.country:hover {
+	text-decoration: underline;
+}
 .scrollbar{
 	height:115px;
 	background:#fff;
 	overflow-y: scroll;
-	padding: 1em 1em 0em 1em;
+	padding: 1em 1em 0em 0em;
 }
 .activity_box{
 	background: #fff;
